--- a/crawler-master/requirements.txt
+++ b/crawler-master/requirements.txt
@@ -11,4 +11,4 @@ python-dotenv==0.12.0
 python-json-logger==0.1.11
 requests==2.23.0
 urllib3==1.25.8
-https://github.com/ashwini2692/crawler/tree/main/pymq-master
+git@github.com:ashwini2692/pymq.git
